⑂ refactor types and split issuer from domain

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ES2019"],
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "esModuleInterop": true,
-    "moduleResolution": "Node",
-    "module": "CommonJS",
-    "target": "ES2019",
+    "moduleResolution": "node",
+    "module": "ESNext",
+    "target": "ES2022",
     "strict": true,
     "skipLibCheck": true,
     "declaration": true,
